[package]
version = "0.0.1"
edition = "2018"
name = "task_executor"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
futures = "0.3"
logging = { path = "../logging" }
# TODO: See #10291.
tokio = { version = "=0.2.20", features = ["blocking", "rt-threaded"] }
workunit_store = { path = "../workunit_store" }
